# platform.core.api.base-utils

./: CMakeLists.txt  LICENSE  LICENSE.ICU
doc/: utils_doc.h
packaging/: capi-base-utils.spec
src/: CMakeLists.txt  capi-base-utils-i18n.pc.in  utils_i18n_alpha_idx.cpp  utils_i18n_field_position.cpp  utils_i18n_filed_position.cpp  utils_i18n_format.cpp  utils_i18n_formattable.cpp  utils_i18n_measure.cpp  utils_i18n_measure_format.cpp  utils_i18n_measure_unit.cpp  utils_i18n_parse_position.cpp  utils_i18n_private.c  utils_i18n_timezone.cpp  utils_i18n_ubrk.c  utils_i18n_ucalendar.c  utils_i18n_uchar.c  utils_i18n_ucollator.c  utils_i18n_udate.c  utils_i18n_udatepg.c  utils_i18n_uenumeration.c  utils_i18n_ulocale.c  utils_i18n_unormalization.c  utils_i18n_unumber.c  utils_i18n_usearch.c  utils_i18n_uset.c  utils_i18n_ustring.c
src/include/mobile/: utils_i18n.h  utils_i18n_alpha_idx.h  utils_i18n_field_position.h  utils_i18n_format.h  utils_i18n_formattable.h  utils_i18n_measure.h  utils_i18n_measure_format.h  utils_i18n_measure_unit.h  utils_i18n_parse_position.h  utils_i18n_private.h  utils_i18n_timezone.h  utils_i18n_types.h  utils_i18n_ubrk.h  utils_i18n_ucalendar.h  utils_i18n_uchar.h  utils_i18n_ucollator.h  utils_i18n_udate.h  utils_i18n_udatepg.h  utils_i18n_uenumeration.h  utils_i18n_ulocale.h  utils_i18n_unormalization.h  utils_i18n_unumber.h  utils_i18n_usearch.h  utils_i18n_uset.h  utils_i18n_ustring.h
src/include/wearable/: utils_i18n.h  utils_i18n_alpha_idx.h  utils_i18n_field_position.h  utils_i18n_format.h  utils_i18n_formattable.h  utils_i18n_measure.h  utils_i18n_measure_format.h  utils_i18n_measure_unit.h  utils_i18n_parse_position.h  utils_i18n_private.h  utils_i18n_timezone.h  utils_i18n_types.h  utils_i18n_ubrk.h  utils_i18n_ucalendar.h  utils_i18n_uchar.h  utils_i18n_ucollator.h  utils_i18n_udate.h  utils_i18n_udatepg.h  utils_i18n_uenumeration.h  utils_i18n_ulocale.h  utils_i18n_unumber.h  utils_i18n_usearch.h  utils_i18n_uset.h  utils_i18n_ustring.h
